# agenttrader

./: .gitignore  .pytest_perf_sync_market_ids.jsonl  CHANGELOG.md  COMMANDS.md  LICENSE  MANIFEST.in  ProjectOverview (1).md  ProjectSteps.md  README.md  SCHEMA.md  alembic.ini  live_paper_smoke_strategy.py  parquet_migration_prompt.md  profile_backtest.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agenttrader/: __init__.py  config.py  errors.py  perf_logging.py
agenttrader/cli/: backtest.py  config.py  dashboard.py  dataset.py  experiments.py  main.py  markets.py  paper.py  prune.py  sync.py  utils.py  validate.py
agenttrader/core/: __init__.py  backtest_engine.py  base_strategy.py  context.py  fill_model.py  paper_daemon.py  paper_daemon_runner.py  price_fill_model.py  scheduler.py
agenttrader/dashboard/: __init__.py  server.py
agenttrader/data/: __init__.py  backtest_artifacts.py  cache.py  cache_provider.py  dome_client.py  index_adapter.py  index_builder.py  index_provider.py  models.py  orderbook_store.py  parquet_adapter.py  parquet_discovery.py  pmxt_client.py  provider.py  source_selector.py
agenttrader/db/: __init__.py  health.py  schema.py
agenttrader/mcp/: __init__.py  server.py
alembic/: env.py
alembic/versions/: 0002_add_provenance.py  0004_drop_legacy_price_history_constraint.py
benchmarks/baselines/: cli_baseline_2026-03-06.json
codex_tmp_init_smoke/: .agenttrader-paths.json
codex_tmp_init_smoke2/: .agenttrader-paths.json
codex_tmp_init_smoke2/db/: db.sqlite
scripts/: benchmark_cli.py  test_pmxt_fetch_markets.py
tests/: conftest.py
tests/fixtures/: sample_strategy.py
tests/integration/: test_full_workflow.py
tests/unit/: test_agent_reported_bugs.py  test_architectural_fixes.py  test_audit_fixes.py  test_backtest_config_mode.py  test_backtest_progress.py  test_backtest_streaming.py  test_cache_provider.py  test_cli_ascii.py  test_config_paths.py  test_dataset_verify.py  test_debug_data_sources.py  test_execution_mode.py  test_index_builder_adapter.py  test_index_provider.py  test_live_paper_trading.py  test_market_capabilities.py  test_mcp_error_fix.py  test_mcp_hardening.py  test_mcp_research_no_sync.py  test_mcp_source_routing.py  test_mcp_sync_market_ids.py  test_migrations.py  test_no_silent_synthetic.py  test_paper_trading_fixes.py  test_parquet_adapter.py  test_perf_logging.py  test_pmxt_client_status.py  test_pmxt_sidecar_guard.py  test_price_fill_model.py  test_provider_protocol.py  test_rust_backtest_parity.py  test_schema_health.py  test_source_selector.py  test_strategy_validator.py  test_strict_backtest.py  test_strict_integration.py  (+1 more)
(+12 files in other folders)
