[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrader"
version = "0.2.2"
description = "Prediction market strategy research, backtesting, and paper trading toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Finn Fujimura" }]
keywords = [
  "trading",
  "prediction-markets",
  "polymarket",
  "kalshi",
  "backtesting",
  "mcp",
  "agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "dome-api-sdk>=1.0.0",
  "click>=8.1",
  "mcp>=1.0.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pyyaml>=6.0",
  "watchdog>=4.0",
  "msgpack>=1.0",
  "tenacity>=8.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "websockets>=12.0",
  "rich>=13.0",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/finnfujimura/agenttrader"
Repository = "https://github.com/finnfujimura/agenttrader"
Issues = "https://github.com/finnfujimura/agenttrader/issues"

[project.scripts]
agenttrader = "agenttrader.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agenttrader*"]

[tool.setuptools.package-data]
agenttrader = [
  "db/alembic.ini",
  "db/migrations/*.py",
  "db/migrations/versions/*.py",
  "dashboard/static/*",
  "dashboard/static/**/*",
]
